@@ -8,6 +8,8 @@
 
 - Fix paths in manpages using autoconf
 
-- Enable libwrap support using autoconf switch
-
 - Better testing on non-PAM systems
+
+- Replace the horror in acconfig.h which tries to comphensate for the 
+  lack of u_intXX_t types. There must be a better way.
+
