@@ -40,8 +40,11 @@ static char rcsid[] = "$OpenBSD: daemon.c,v 1.2 1996/08/19 08:22:13 tholo Exp $"
 #endif /* LIBC_SCCS and not lint */
 
 #include <fcntl.h>
-#include <paths.h>
 #include <unistd.h>
+
+#ifdef HAVE_PATHS_H
+# include <paths.h>
+#endif 
 
 int
 daemon(nochdir, noclose)
